views/assets/app.css
{{define "baseCss"}}
html, body {
    height: 100%;
    font-family: monospace;
    overflow: hidden;
}
.center {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100%;
}
.row-box {
    display: flex; 
    flex-direction: row;
}
.input-text {
    background: #fff;
    box-shadow: 3px 3px 3px #ccc;   
    padding: 60px 30px 30px;
    border: #dedede 1px solid;
    border-radius: 15px;
}
.input-box textarea{
    max-width:100%;
}

.input-box {
    width: 100%;
    word-wrap: break-word;
}

input[type=button],input[type=text],input[type=number], input[type=submit], input[type=reset] {
    background-color: white;
    /* border: none; */
    color: black;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
    box-shadow: 3px 3px 3px #ccc;   
    border: #dedede 1px solid;
    border-radius: 5px;
}
input[type=checkbox] {
    border: #dedede 1px solid;
    border-radius: 5px;
}
.description {
    margin-left: 10px;
    position: fixed;
    bottom: 0;
    left: 0;
}
.hide {
    display: none;
}

.show {
    display: block;
}

.input-text:focus,input[type="text"]:focus,input[type="number"]:focus {
    outline: none !important;
    border:1px solid rgb(162, 162, 162);
    box-shadow: 6px 6px 6px #ccc;
}

.logo {
    border:1px solid #dedede;
    box-shadow: 3px 3px 3px #ccc;
    border-radius: 5px;
}

@media screen and (max-width : 1000px) {
    body {
        font-size: 200%;
    }
    .input-text {
        width: 90%;
    } 
}
{{end}}

